--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
+
     <div class="promo">
       <div class="container">
         <header class="header">
@@ -56,6 +57,30 @@
 		  <button class="button button_main">Заказать консультацию</button>
 
 		  <a href="#" class="promo__link">или <span>ПЕРЕЙТИ В КАТАЛОГ</span> </a>
+        </div>
+      </div>
+    </div>
+    <div class="advantages">
+      <div class="container">
+        <h2 class="header_h2">НАШИ ПРЕИМУЩЕСТВА</h2>
+        <div class="advantages__wrapper">
+
+          <div class="advantages__item">
+            <img src="img/icons/cup.png" alt="icon1" class="advantages__icon">
+            <div class="text_title text_title_advantages">Делимся опытом</div>
+            <div class="text_descr text_descr_advantages">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+          </div>
+          <div class="advantages__item">
+            <img src="img/icons/heart.png" alt="icon2" class="advantages__icon">
+            <div class="text_title text_title_advantages">Заботимся о здоровье</div>
+            <div class="text_descr text_descr_advantages">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+          </div>
+          <div class="advantages__item">
+            <img src="img/icons/shoe.png" alt="icon3" class="advantages__icon">
+            <div class="text_title text_title_advantages">Учим бегать</div>
+            <div class="text_descr text_descr_advantages">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span>I LOVE RUNNING.</span> </div>
+          </div>
+
         </div>
       </div>
     </div>
