--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,17 @@
       href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link rel="stylesheet" href="scss/slick.scss" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
 
-    <div class="promo">
+    <section class="promo">
       <div class="container">
         <header class="header">
           <a href="#" class="header__logo">
@@ -38,51 +44,151 @@
           <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
 
           <div class="promo__icons">
-			<div class="promo_icon">
-				<img src="img/icons/019_timer_time_stopwatch_2-64.svg" alt="icon">
-				Время подбора:
-				10 минут
-			</div>
-			<div class="promo_icon">
-				<img src="img/icons/app-08-hand-cart-64.svg" alt="icon">
-				Бесплатная 
-				доставка
-			</div>
-			<div class="promo_icon">
-				<img src="img/icons/messages-64.svg" alt="icon">
-				Ответим на все вопросы
-			</div>
-		  </div>
+            <div class="promo_icon">
+              <img
+                src="img/icons/019_timer_time_stopwatch_2-64.svg"
+                alt="icon"
+              />
+              Время подбора: 10 минут
+            </div>
+            <div class="promo_icon">
+              <img src="img/icons/app-08-hand-cart-64.svg" alt="icon" />
+              Бесплатная доставка
+            </div>
+            <div class="promo_icon">
+              <img src="img/icons/messages-64.svg" alt="icon" />
+              Ответим на все вопросы
+            </div>
+          </div>
 
-		  <button class="button button_main">Заказать консультацию</button>
+          <button class="button button_main">Заказать консультацию</button>
+          <a href="#" class="promo__link"
+            >или <span>ПЕРЕЙТИ В КАТАЛОГ</span>
+          </a>
 
-		  <a href="#" class="promo__link">или <span>ПЕРЕЙТИ В КАТАЛОГ</span> </a>
         </div>
       </div>
-    </div>
-    <div class="advantages">
+    </section>
+
+    <section class="advantages">
+
       <div class="container">
-        <h2 class="header_h2">НАШИ ПРЕИМУЩЕСТВА</h2>
+        <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
         <div class="advantages__wrapper">
-
           <div class="advantages__item">
-            <img src="img/icons/cup.png" alt="icon1" class="advantages__icon">
+            <img src="img/icons/cup.png" alt="icon1" class="advantages__icon" />
             <div class="text_title text_title_advantages">Делимся опытом</div>
-            <div class="text_descr text_descr_advantages">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+            <div class="text_descr text_descr_advantages">
+              Наши сотрудники всегда готовы поделиться своим опытом, так как
+              сами бегают полумарафоны, переплыли Босфор, готовятся к
+              соревнованиям по триатлону!
+            </div>
           </div>
           <div class="advantages__item">
-            <img src="img/icons/heart.png" alt="icon2" class="advantages__icon">
-            <div class="text_title text_title_advantages">Заботимся о здоровье</div>
-            <div class="text_descr text_descr_advantages">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+            <img
+              src="img/icons/heart.png"
+              alt="icon2"
+              class="advantages__icon"
+            />
+            <div class="text_title text_title_advantages">
+              Заботимся о здоровье
+            </div>
+            <div class="text_descr text_descr_advantages">
+              Мы работаем для того, чтобы Ваши занятия спортом шли на пользу
+              Вашему здоровью и были в радость Вам и Вашим близким!
+            </div>
           </div>
           <div class="advantages__item">
-            <img src="img/icons/shoe.png" alt="icon3" class="advantages__icon">
+            <img
+              src="img/icons/shoe.png"
+              alt="icon3"
+              class="advantages__icon"
+            />
             <div class="text_title text_title_advantages">Учим бегать</div>
-            <div class="text_descr text_descr_advantages">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span>I LOVE RUNNING.</span> </div>
+            <div class="text_descr text_descr_advantages">
+              Помогаем с обучением правильной технике бега! Дружим с крупнейшей
+              школой бега в России - <span>I LOVE RUNNING.</span>
+            </div>
           </div>
-
         </div>
       </div>
-    </div>
+
+    </section>
+
+    <section class="consultation">
+
+      <div class="container">
+        <h2 class="title title_left">
+          Получите бесплатную консультацию <br />
+          по подбору пульсометра
+        </h2>
+        <div class="consultation__descr">
+          Просто заполните форму заявки <br />
+          и мы перезвоним вам в течении 10 минут
+        </div>
+        <form class="feed_form" action="#">
+          <input name="name" required placeholder="Ваше имя" type="text" />
+          <input name="phone" required placeholder="Ваше телефон" type="text" />
+          <input name="email" required placeholder="Ваше E-mail" type="email" />
+          <button class="button button_form">заказать кОНСУЛЬТАЦИЮ</button>
+        </form>
+      </div>
+
+    </section>
+
+    <section class="carousel">
+
+      <div class="container">
+        <div class="carousel__inner">
+          <div>
+            <img src="img/icons/slide_1.png" alt="" />
+          </div>
+          <div>
+            <img src="img/icons/slide_2.png" alt="" />
+          </div>
+          <div>
+            <img src="img/icons/slide_3.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="catalog">
+      <div class="container">
+        <h2 class="title">Каталог пульсометров</h2>
+        <ul class="catalog__tabs">
+          <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div> </li>
+          <li class="catalog__tab"><div>для бега</div> </li>
+          <li class="catalog__tab"><div>для триатлона</div> </li>
+        </ul>
+
+      <div class="catalog__content">
+        <div class="catalog-item">
+          <img src="img/icons/watch.png" alt="" class="catalog__img">
+          <div class="text_title text_title_catalog">Пульсометр Polar FT1</div>
+          <div class="text_descr text_descr_catalog">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+          <a href="" class="catalog-item__link">Подробнее</a>
+          <hr>
+          <div class="catalog-item__footer">
+            <div class="catalog-item__prices">
+                <div class="catalog-item__old-price">4 750 руб.</div>
+                <div class="catalog-item__price">4 500 руб.</div>
+            </div>
+            <button class="button button_catalog">КУПИТЬ</button>
+          </div>
+        </div>
+      </div>
+      <div class="catalog__content"></div>
+      <div class="catalog__content"></div>
+
+      </div>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/index.min.js"></script>
   </body>
 </html>
