--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             <a href="tel:+74999228974" class="header__phone"
               >+7 (499) 922-89-74</a
             >
-            <button class="button">заказать звонок</button>
+            <button data-modal="consultation" class="button">заказать звонок</button>
           </div>
         </header>
 
@@ -61,7 +61,7 @@
             </div>
           </div>
 
-          <button class="button button_main">Заказать консультацию</button>
+          <button data-modal="consultation" class="button button_main">Заказать консультацию</button>
           <a href="#" class="promo__link"
             >или <span>ПЕРЕЙТИ В КАТАЛОГ</span>
           </a>
@@ -124,11 +124,11 @@
           Просто заполните форму заявки <br />
           и мы перезвоним вам в течении 10 минут
         </div>
-        <form class="feed_form" action="#">
-          <input name="name" required placeholder="Ваше имя" type="text" />
-          <input name="phone" required placeholder="Ваше телефон" type="text" />
-          <input name="email" required placeholder="Ваше E-mail" type="email" />
-          <button class="button button_form">заказать кОНСУЛЬТАЦИЮ</button>
+        <form id="consultation-form" class="feed_form" action="#">
+          <input name="name"  placeholder="Ваше имя" type="text" />
+          <input name="phone"  placeholder="Ваше телефон" type="text" />
+          <input name="email"  placeholder="Ваше E-mail" type="email" />
+          <button  class="button button_form">заказать кОНСУЛЬТАЦИЮ</button>
         </form>
       </div>
 
@@ -189,7 +189,7 @@
                           <div class="catalog-item__old-price">6 990 руб.</div>
                           <div class="catalog-item__price">6 641 руб.</div>
                       </div>
-                      <button class="button button_catalog">КУПИТЬ</button>
+                      <button data-modal="order" class="button button_catalog">КУПИТЬ</button>
                   </div>
               </div>
               <div class="catalog-item">
@@ -524,10 +524,46 @@
   </footer>
 
 
+  <div class="overlay">
+    <div class="modal" id="consultation">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Просто заполните форму заявки</div>
+      <div class="modal__description">и мы перезвоним вам в течении 10 минут</div>
+      <form class="feed_form feed_form_mt26" action="#">
+        <input name="name" required placeholder="Ваше имя" type="text" />
+        <input name="phone" required placeholder="Ваше телефон" type="text" />
+        <input name="email" required placeholder="Ваше E-mail" type="email" />
+        <button class="button button_form">заказать кОНСУЛЬТАЦИЮ</button>
+      </form>
+    </div>
+
+
+    <div class="modal" id="order">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Ваш заказ:</div>
+      <div class="modal__description">и мы перезвоним вам в течении 10 минут</div>
+      <form class="feed_form feed_form_mt26" action="#">
+        <input name="name" required placeholder="Ваше имя" type="text" />
+        <input name="phone" required placeholder="Ваше телефон" type="text" />
+        <input name="email" required placeholder="Ваше E-mail" type="email" />
+        <button class="button button_form">Купить</button>
+      </form>
+    </div>
+
+    <div class="modal modal_mini" id="feedback">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+      <div class="modal__description">Наш менеджер свяжется с вами в <br> ближайшее время!</div>
+    </div>
+
+
+  </div>
+
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/index.min.js"></script>
   </body>
 </html>
